--- a/now.json
+++ b/now.json
@@ -1,11 +1,13 @@
 {
 	"version": 2,
 	"builds": [
-    { "src": "package.json", "use": "@now/static-build", "config": { "distDir": "build" }},
+		{ "src": "package.json", "use": "@now/static-build", "config": { "distDir": "build" }},
 		{ "src": "api/*", "use": "@now/node"}
-  ],
-  "routes": [],
-  "env": {
-    "MONGO_URI": "@mongo-uri"
-  }
+	],
+    "routes": [
+		{ "src": "/facebook", "dest": "/" }
+	],
+	"env": {
+		"MONGO_URI": "@mongo-uri"
+	}	
 }
